src/snapshots/hooklistener__tests__command_output_empty_states.snap
---
source: src/main.rs
assertion_line: 5109
expression: output
---
ENDPOINT LIST
[INFO] NO DEBUG ENDPOINTS FOUND

ACTION         Run `hooklistener endpoint create <name>` to create one.


REQUEST LIST
[INFO] NO REQUESTS FOUND

ACTION         Send a webhook, then run `hooklistener endpoint requests
               <endpoint-id>` again.


FORWARD LIST
[INFO] NO FORWARDS FOUND

ACTION         Run `hooklistener endpoint forward-request <endpoint-id>
               <request-id> <target-url>`.


SHARE LIST
[INFO] NO SHARES FOUND

ACTION         Run `hooklistener share create <request-id>` to create one.


MONITOR LIST
[INFO] NO UPTIME MONITORS FOUND

ACTION         Run `hooklistener monitor create <name> <url>` to create one.


MONITOR CHECKS
[INFO] NO CHECKS RECORDED

ACTION         Wait for the first interval, then run `hooklistener monitor
               checks <monitor-id>`.


STATIC TUNNEL LIST
[INFO] NO STATIC TUNNELS FOUND

ACTION         Run `hooklistener static-tunnel create <slug>` to reserve one.


ANON EVENTS
[INFO] NO EVENTS CAPTURED

ACTION         Send a webhook, then run `hooklistener anon events <endpoint-id>
               --token <token>`.
