src/snapshots/hooklistener__tests__command_output_error_block.snap
---
source: src/main.rs
assertion_line: 3043
expression: output
---
[ERR] COMMAND FAILED

MESSAGE        Not authenticated
ACTION         Run `hooklistener login`
