src/snapshots/hooklistener__tests__command_output_monitor_table.snap
---
source: src/main.rs
expression: output
---
┌─────────┬────────┬────────┬─────┬────────────────────────┬────────────┐
│ ID      ┆ STATUS ┆ METHOD ┆ INT ┆ URL                    ┆ NAME       │
╞═════════╪════════╪════════╪═════╪════════════════════════╪════════════╡
│ mon_123 ┆ up     ┆ GET    ┆ 5m  ┆ https://serpgoblin.com ┆ SerpGoblin │
└─────────┴────────┴────────┴─────┴────────────────────────┴────────────┘
