src/snapshots/hooklistener__tests__command_output_pagination.snap
---
source: src/main.rs
assertion_line: 3068
expression: output
---
PAGE 2/5  PAGE SIZE 25  TOTAL 120
