src/snapshots/hooklistener__tests__command_output_request_deleted.snap
---
source: src/main.rs
assertion_line: 3027
expression: output
---
[OK] REQUEST DELETED

REQUEST        req_123
ENDPOINT       ep_123
ORGANIZATION   org_123
