src/snapshots/hooklistener__tests__command_output_table_family.snap
---
source: src/main.rs
assertion_line: 4911
expression: output
---
ORG LIST
┌───┬─────────┬───────────────────┐
│   ┆ ID      ┆ NAME              │
╞═══╪═════════╪═══════════════════╡
│ * ┆ org_123 ┆ Hooklistener Labs │
│   ┆ org_456 ┆ Platform Team     │
└───┴─────────┴───────────────────┘


ENDPOINT LIST
┌────────┬─────────────────┬────────┬─────────────────────────────────┬────────┐
│ ID     ┆ SLUG            ┆ STATUS ┆ WEBHOOK URL                     ┆ NAME   │
╞════════╪═════════════════╪════════╪═════════════════════════════════╪════════╡
│ ep_123 ┆ github-webhooks ┆ active ┆ https://hooks.example.dev/githu ┆ GitHub │
│        ┆                 ┆        ┆ b-webhooks                      ┆        │
└────────┴─────────────────┴────────┴─────────────────────────────────┴────────┘


ENDPOINT REQUEST LIST
┌─────────┬────────┬─────────────────────────────────────────┬───────────────┐
│ ID      ┆ METHOD ┆ URL                                     ┆ REMOTE        │
╞═════════╪════════╪═════════════════════════════════════════╪═══════════════╡
│ req_123 ┆ POST   ┆ /webhooks/github/push?delivery=1c07ce58 ┆ 172.71.190.83 │
└─────────┴────────┴─────────────────────────────────────────┴───────────────┘


REQUEST FORWARDS
┌─────────┬────────┬────────┬──────────┬────────────────────────────────┐
│ ID      ┆ METHOD ┆ STATUS ┆ DURATION ┆ TARGET                         │
╞═════════╪════════╪════════╪══════════╪════════════════════════════════╡
│ fwd_123 ┆ POST   ┆ 200    ┆ 42ms     ┆ http://localhost:3000/webhooks │
│ fwd_456 ┆ POST   ┆ -      ┆ -        ┆ http://localhost:3001/webhooks │
│         ┆        ┆        ┆          ┆   [ERR] connection refused     │
└─────────┴────────┴────────┴──────────┴────────────────────────────────┘


STATIC TUNNEL LIST
┌─────────┬──────────┬────────────────────┐
│ ID      ┆ SLUG     ┆ NAME               │
╞═════════╪══════════╪════════════════════╡
│ tun_123 ┆ acme-dev ┆ Development tunnel │
└─────────┴──────────┴────────────────────┘


ANON EVENTS
┌─────────┬────────┬──────────────────────┐
│ ID      ┆ METHOD ┆ RECEIVED AT          │
╞═════════╪════════╪══════════════════════╡
│ evt_123 ┆ POST   ┆ 2026-05-29T12:00:00Z │
└─────────┴────────┴──────────────────────┘


SHARE LIST
┌─────────┬────────────────────┬──────┬───────┬───────────┬────────────────────┐
│ ID      ┆ TOKEN              ┆ FWDS ┆ VIEWS ┆ PROTECTED ┆ EXPIRES AT         │
╞═════════╪════════════════════╪══════╪═══════╪═══════════╪════════════════════╡
│ shr_123 ┆ share_abcdef123456 ┆ yes  ┆ 14    ┆ no        ┆ 2026-06-05T12:00:0 │
│         ┆                    ┆      ┆       ┆           ┆ 0Z                 │
└─────────┴────────────────────┴──────┴───────┴───────────┴────────────────────┘


MONITOR CHECKS
┌─────────┬────────┬──────┬──────────┬──────────────────────┬─────────┐
│ ID      ┆ STATUS ┆ CODE ┆ RESPONSE ┆ CHECKED AT           ┆ ERROR   │
╞═════════╪════════╪══════╪══════════╪══════════════════════╪═════════╡
│ chk_123 ┆ up     ┆ 200  ┆ 184ms    ┆ 2026-05-29T12:00:00Z ┆ -       │
│ chk_456 ┆ down   ┆ 500  ┆ 901ms    ┆ 2026-05-29T12:05:00Z ┆ timeout │
└─────────┴────────┴──────┴──────────┴──────────────────────┴─────────┘
