src/snapshots/hooklistener__tests__command_output_table_headers.snap
---
source: src/main.rs
assertion_line: 3055
expression: output
---
┌─────────┬────────┬────────┬──────────────────────┐
│ ID      ┆ METHOD ┆ STATUS ┆ CHECKED AT           │
╞═════════╪════════╪════════╪══════════════════════╡
│ req_123 ┆ POST   ┆ 200    ┆ 2026-05-29T12:00:00Z │
└─────────┴────────┴────────┴──────────────────────┘
